--- a/style.css
+++ b/style.css
@@ -82,6 +82,7 @@ span{
     width: 90%;
     padding: 10px;
     margin: auto;
+    margin-top: 10px;
     color: white;
 }
 
@@ -100,6 +101,7 @@ span{
     width: 90%;
     padding: 10px;
     margin: auto;
+    margin-top: 10px;
     color: white;
 }
 
@@ -145,6 +147,7 @@ span{
     width: 90%;
     padding: 10px;
     margin: auto;
+    margin-top: 5px;
     color: white;
 }
 
